--- a/COVID_19_Mundial.ipynb
+++ b/COVID_19_Mundial.ipynb
@@ -379,7 +379,7 @@
         "    plt.xticks([],[])\n",
         "    plt.yticks([],[])\n",
         "\n",
-        "    plt.text(-193,0,'@canalpeixebabel', fontsize=12, va='center', color='darkblue', rotation=90)\n",
+        "    plt.text(-193,0,'@joaotite', fontsize=12, va='center', color='darkblue', rotation=90)\n",
         "    plt.savefig(tipo+'/{:02d}.png'.format(k), dpi=150, format='png')"
       ],
       "execution_count": 0,
@@ -449,7 +449,7 @@
         "                  ec=(1., 0.5, 0.5),\n",
         "                  facecolor=(0.7, 0.1, 0.1, 0.8),\n",
         "                  ),color='white', fontsize=30)\n",
-        "plt.text(-193,0,'@canalpeixebabel', fontsize=12, va='center', color='darkblue', rotation=90)\n",
+        "plt.text(-193,0,'@joaotite', fontsize=12, va='center', color='darkblue', rotation=90)\n",
         "plt.savefig('logtitle.png', dpi=100,format='png')\n",
         "plt.close('all')\n",
         "\n",
@@ -460,7 +460,7 @@
         "                  ec=(1., 0.5, 0.5),\n",
         "                  facecolor=(0.7, 0.1, 0.1, 0.8),\n",
         "                  ),color='white', fontsize=30)\n",
-        "plt.text(-193,0,'@canalpeixebabel', fontsize=12, va='center', color='darkblue', rotation=90)\n",
+        "plt.text(-193,0,'@joaotite', fontsize=12, va='center', color='darkblue', rotation=90)\n",
         "plt.savefig('abstitle.png', dpi=100,format='png')\n",
         "plt.close('all')"
       ],
